Se agrego CRUD, libreria dapper y el controlador

--- a/Website/Views/Peliculas/Create.cshtml
+++ b/Website/Views/Peliculas/Create.cshtml
@@ -4,7 +4,7 @@
 }
 
 <h2>Create</h2>
-<form action="../Peliculas/" method="post">
+<form action="Create" method="post">
     <label>Nombre</label><br>
     <input type="text" name="nombre" value=""><br><br>
     <label>Autor</label><br>
@@ -18,5 +18,4 @@
     <input type="submit" value="Enviar">
 </form>
 
-<h2>Create</h2>
 
