--- a/Website/Views/Peliculas/Edit.cshtml
+++ b/Website/Views/Peliculas/Edit.cshtml
@@ -1,9 +1,9 @@
 ﻿@model IEnumerable<Website.Models.CrudModel>
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
 @foreach (var item in Model)
 {
